# shadowblade

./: .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  PROJECT_CONTEXT.md  README.md  chat.py  pyproject.toml  requirements.txt
config/: settings.yaml
docs/: HANDOFF.md  INDEX.md  architecture.html  architecture.md  decisions.md  hermes_setup.md  progress.md  research.md
docs/modules/: ai_engine.md  dynamic_engine.md  static_engine.md
docs/planning/: 2026现状调研与论文方向修正.md  baseline复现结果_MalSkillBench.md  小批实验结果_方向A.md  影刃卫士_CCFC论文可行性与排期优化.md  影刃卫士_v2架构重构设计.md  影刃卫士_客观评估报告.md  新兴风口调研_下一代Agent安全方向.md  方向A_运行时接地能力一致性核验_研究计划.md  方向丙_crossapp防御_设计_2026-07.md  方向决策_全候选彻底对比.md  方向决策与竞品复盘_2026-07.md  竞品对比与投稿定位_2026-07.md  级联小批实验结果_2026-07.md  论文骨架_方向A_2026-07.md
knowledge/: README.md
knowledge/.obsidian/: app.json
knowledge/1_Notes/: C语言实验三-数组与函数1代码讲解.md  图书管理系统架构.md
models/qwen3-4b-awq/: README.md
sandbox/: README.md
scripts/: e2e_smoke_conformance.py  run_cascade_batch.py  run_crossapp_defense.py  run_crossapp_demo.py  run_pilot_batch.py
src/ai_engine/: llm_client.py  llm_judge.py  rag_knowledge.py
src/cascade/: __init__.py  cascade.py  evaluate.py
src/conformance/: __init__.py  capabilities.py  conformance.py  pipeline.py
tests/: test_cascade.py  test_conformance.py  test_conformance_pipeline.py  test_crossapp.py  test_dynamic_engine.py  test_evaluation.py  test_llm_client.py  test_llm_judge.py  test_malskillbench_loader.py  test_pipeline.py  test_rag_knowledge.py  test_real_samples.py  test_sandbox_shims.py  test_scanner.py  test_skill_parser.py
(+29 files in other folders)
